# PrettyLazy0

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
data/exp01-recognize-identifier/: case04.pl0  case05.pl0
data/exp02-analyze-morphology/: case02.pl0  case03.pl0  case04.pl0  case05.pl0
docs/: Branch_Naming_Convention.md  Branch_Naming_Convention_zh.md  Env_Guide.md  Env_Setup_Guide.md  Env_Setup_Guide_for_Windows.md  How_to_Contribute.md  How_to_Contribute_as_a_Colaborator.md  How_to_Contribute_as_a_Colaborator_zh.md  How_to_Contribute_as_a_Collaborator.md  How_to_Contribute_as_a_Collaborator_zh.md  How_to_Contribute_as_a_Non-Collaborator.md
include/: Const.hpp  example.hpp  plazy.hpp
include/Common/: PL0.hpp  Utils.hpp
include/plazy/Common/: ArgParser.hpp  Exceptions.hpp  Logger.hpp  PreDefined.hpp  Predefine.hpp  Split.hpp  Token.hpp  Utils.hpp
include/plazy/Core/: Action.hpp  Lexer.hpp  Optimizer.hpp  Parser.hpp  SemanticParser.hpp  Symbol.hpp  SyntaxAnalyzer.hpp  Token.hpp
include/plazy/Experiment/: RecognizeIdent.hpp
include/plazy/Utils/: ArgParser.hpp  StrUtils.hpp
include/plazyExamples/: LexerExample.hpp  LoggerExample.hpp  SplitExample.hpp
include/plazyExperiments/: AnalyzeMorphology.hpp  RecognizeIdent.hpp
scripts/: build-linux.sh  build.ps1  build.sh  set-env-vars-windows.ps1  test-linuxX64-exp01.sh  test-linuxX64-exp02.sh  test-windowsX64-exp01.ps1  test-windowsX64-exp02.ps1  test.ps1  test.sh
src/: CMakeLists.txt  main.cpp
src/example/: LoggerExample.cpp  loggerExample.cpp  splitExample.cpp
src/plazy/Common/: ArgParser.cpp
src/plazy/Core/: Action.cpp  Lexer.cpp  Optimizer.cpp  Parser.cpp  SemanticParser.cpp  Symbol.cpp  SyntaxAnalyzer.cpp  Token.cpp
src/plazy/Experiment/: RecognizeIdent.cpp
src/plazy/Utils/: ArgParser.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/Examples/: Lexer_main.cpp  Logger_main.cpp  Split_main.cpp
tests/Experiments/: exp01-recognize-identifier_main.cpp  exp02-analyze-morphology_main.cpp  exp03-grammar-analyze_main.cpp  exp04-analyze-semantics_main.cpp  exp06-optimize_main.cpp
tests/data/exp01-recognize-identifier/: case01.pl0  case04.pl0
tests/data/exp03/: case01.pl0  case02.pl0  case03.pl0  case04.pl0  case05.pl0  case06.pl0  case07.pl0  case08.pl0  case09.pl0
tests/data/exp04/: case02.pl0  case03.pl0  case04.pl0  case05.pl0  case08.pl0  case09.pl0  case10.pl0
tests/data/exp06/: case02.txt
